@@ -1,3 +1,12 @@
+2025-02-01T01:04:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13083451862 # 552
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-01
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 437 827 / 438 828
+* notice: next accum: outdated-unq outdated-all / unq all: 438 828 / 439 829
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-01-13] / [2025-01-31]
+
 2025-01-22T01:01:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12898959029 # 542
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-22
